--- a/odin-recipes/Recipes/air-fryed-fried-eggs.html
+++ b/odin-recipes/Recipes/air-fryed-fried-eggs.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air fryed fried eggs</title>
+    <link rel="stylesheet" href="..\style.css">
 </head>
 <body>
-    <h1>Air fryed fried eggs</h1>
-<img src="..\images\air-fryed-fried-eggs.webp"/>
-<h3>Description:</h3>
+    <h1 class="foodtitle">Air fryed fried eggs</h1>
+<img class="foodimg" src="..\images\air-fryed-fried-eggs.webp"/>
+<div class="description">
+<h3 id="description">Description:</h3>
 
-<ul aria-label="Ingredients:">
+<ul class="ingredients" aria-label="Ingredients:">
     <li>1 piece aluminum foil (4x5 inches)</li>
     <li>cooking spray</li>
     <li>1 large egg</li>
     <li>salt and freshly ground black pepper to taste</li>
 </ul>
-<ol aria-label="Steps:">
+<ol class="steps" aria-label="Steps:">
     <li>Preheat an air fyre to 380 degrees F (193 degrees C).</li>
     <li>Shape foil piece into a circular shape leaving the bottom flat with edges curled inward to form a bowl. Spray the bottom of the bowl with non-stick cooking spray. Set foil bowl into the air fryer basket.</li>
     <li>Crack egg into the center of the foil. Cook for 4 minutes. Remove foil bowl from the basket and season with salt and pepper to taste.</li>
 </ol>
+</div>
 </body>
 </html>
