--- a/odin-recipes/Recipes/pastaroni.html
+++ b/odin-recipes/Recipes/pastaroni.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastaroni</title>
+    <link rel="stylesheet" href="..\style.css">
 </head>
 <body>
-    <h1>Pastaroni</h1>
-    <img src="..\images\pastaroni.webp"/>
-    <h3>Description:</h3>
+    <h1 class="foodtitle">Pastaroni</h1>
+    <img class="foodimg" src="..\images\pastaroni.webp"/>
+    <div class="description">
+    <h3 id="description">Description:</h3>
     
-    <ul aria-label="Ingredients:">
+    <ul class="ingredients" aria-label="Ingredients:">
         <li>2 cups chicken broth</li>
         <li>3 ounces angel hair pasta</li>
         <li>1 tablespoon butter</li>
@@ -21,11 +23,12 @@
         <li>¾ cup finely shredded Parmesan cheese</li>
         <li>1 teaspoon minced fresh parsley, or to taste</li>
     </ul>
-    <ol aria-label="Steps:">
+    <ol class="steps" aria-label="Steps:">
         <li>Bring chicken broth in a saucepan to a boil over medium-high heat. Cook angel hair pasta in the boiling broth, stirring occasionally, until tender yet firm to the bite, 4 to 5 minutes.</li>
         <li>Drain pasta, reserving 1/4 cup of chicken broth.</li>
         <li>Melt butter in a saucepan over medium-low heat; add garlic and cook until fragrant, about 30 seconds. Stir in Italian seasoning, reserved 1/4 cup chicken broth, and whipping cream. Add Parmesan cheese and stir until melted.</li>
         <li>Stir in angel hair pasta; toss to coat. Garnish with freshly minced parsley.</li>
     </ol>
+</div>
 </body>
 </html>
