--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="odin-recipes">
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/pastaroni.html">Pastaroni</a></li>
         <li><a href="recipes/air-fryed-fried-eggs.html">Air fryed fried eggs</a></li>
     </ul>
+    </div>
 </body>
 </html>
