--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,7 +18,19 @@
             <li><a href="">header link three</a></li>
         </ul>
     </div>
-    </header>
+</div>
+
+<div class="content-1">
+    <div class="content-1-text">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+        <button class="sign-up-btn">Sign up</button>
+    </div>
+    <div class="content-1-img">
+        <img>this is a placeholder for an image</img>
+    </div>
+    
+</div>
 
 </body>
 </html>
