--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -29,7 +29,29 @@
     <div class="content-1-img">
         <img>this is a placeholder for an image</img>
     </div>
-    
+</div>
+
+<div class="content-2">
+    <div class="content-2-text">Some random information.</div>
+    <div class="card-container">
+
+        <div class="card">
+            <img></img>
+            <p class="card-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img></img>
+            <p class="card-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img></img>
+            <p class="card-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <img></img>
+            <p class="card-text">this is some subtext under an illustration or image</p>
+        </div>
+    </div>
 </div>
 
 </body>
