--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -54,5 +54,12 @@
     </div>
 </div>
 
+<div class="content-3">
+    <div class="quote">
+    <p id="p-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+    <p id="p-author">-Thor, God of Thunder</p>
+    </div>
+</div>
+
 </body>
 </html>
