--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -56,8 +56,20 @@
 
 <div class="content-3">
     <div class="quote">
-    <p id="p-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p id="p-author">-Thor, God of Thunder</p>
+        <p id="p-quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p id="p-author">-Thor, God of Thunder</p>
+    </div>
+</div>
+
+<div class="content-4">
+    <div id="sign-up-card">
+        <div class="content-4-txt">
+            <p id="p-action-call">Call to action! It's time!</p>
+            <p id="p-sign-up">Sign up for product by clicking that button right over there!</p>
+        </div>
+        <div class="content-4-sign-up-btn">
+            <button >Sign up</button>
+        </div>
     </div>
 </div>
 
