--- a/fundamentals/rock-paper-scissors/index.html
+++ b/fundamentals/rock-paper-scissors/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock-paper-scissors</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="button-container">
+        <button id="rock-button">Rock</button>
+        <button id="paper-button">Paper</button>
+        <button id="scissors-button">Scissors</button>
+    </div>
+        <div class="results">
+            <div id="player-score">0</div>
+            <p id="results-text"></p>
+            <div id="computer-score">0</div>
+        </div>
     
 </body>
 </html>
